--- a/translations/translation_fr.xml
+++ b/translations/translation_fr.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8" standalone="no" ?>
 <l10n>
     <contributors>
-        <name>Lactic68, Papy Sarmax</name>
+        <name>Lactic68</name>
+        <name>Papy Sarmax</name>
     </contributors>
 
     <!-- Translation Notes!
